See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.51.00

              pnmsmooth: Respect -plain.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmsmooth: Don't display pnmconvol messages (i.e. run
              pnmconvol with -quiet).

              pnmsmooth: fix arithmetic overflow with absurdly large
              convolution matrix dimensions.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmsmooth: fix wild pointer: causes wrong arguments to
              'pnmconvol'.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

10.03.27 BJH  Release 10.50.00

              Add pamtoavs, avstopam.  Thanks Scott Pakin.

              Add pampaintspill.

              pnmconvol: Add -normalize .

              pm_system(): Close extraneous file descriptors that, among
              other things, prevent child from seeing EOF.

              libnetpbm: Add PNM_GETR(), PNM_GETG(), PNM_GETB().  Same
              as PPM_GETR(), etc.

              libnetpbm: Add ppm_luminosity().  Same as PPM_LUMIN, but
              returns pixval.

              pnmhisteq: Equalize based on luminosity alone, rather than a
              strange combination of luminosity and HSV value.

              pamenlarge: Make special fast path for scale factors up to 10
              (2, 3, and 5 already existed).  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pamflip: Speed up for most images.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              ybmtopbm: Assume YBM format has raster in natural order
              instead of byte-reversed.  This is what pbmtoybm creates,
              and is most logical.  We don't know if there are any existing
              YBM images or generators of them other than pbmtoybm.

              pbmpscale: speedup.

              pbmclean: speedup.
